@@ -1,3 +1,6 @@
+2010-05-12 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+	* Fixed FS#19399 - missing postprocess-example.conf file
+
 2010-05-04 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 	* Update to major release 0.7.0
 
